fixed shift in hero section

--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -3,7 +3,6 @@
     width: 54%;
     max-width: 54vw;
     padding: 2em 1em;
-    width: 100%;
     height: auto;
     min-height: 100vh;
     overflow-x: hidden;
